# decorators

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish_to_pypi.yaml
examples/: core_examples.py  log_examples.py  timer_examples.py
src/: __init__.py  asynchronous.py  convert.py  core.py  log.py  reader.py  test.py  timer.py
src/decorators/: __init__.py  asynchronous.py  convert.py  core.py  log.py  reader.py  test.py  timer.py
test/: __init__.py  test_convert.py  test_core.py  test_log.py  test_reader.py
tests/: __init__.py  asynchronous_test.py  convert_test.py  core_test.py  log_test.py  reader_test.py  test_asynchronous.py  test_convert.py  test_core.py  test_log.py  test_reader.py  test_timer.py
