[metadata]
name = decorators
description = Python library with common and useful decorator functions.
author = Ricky
author_email = p.ricky.dev@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 0.1.0
url = https://github.com/Ricky294/decorators
install_requires =
    numpy>=1.20.0
    pandas>=1.0.0
    APScheduler>=3.6.0

[options]
packages =
    decorators

package_dir =
    =src
test_suite = tests
include_package_data = True
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
decorators = py.typed

[flake8]
max-line-length = 120